--- a/src/main/resources/org/example/gestionproduit/Login.fxml
+++ b/src/main/resources/org/example/gestionproduit/Login.fxml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.gestionproduit.controller.LoginController">
+<AnchorPane prefHeight="500.0" prefWidth="600.0"
+            xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="org.example.gestionproduit.controller.LoginController"
+            stylesheets="@style.css">
 
-    <!-- Container for the Login UI -->
-    <VBox alignment="CENTER" layoutX="147.0" layoutY="39.0" prefHeight="321.0" prefWidth="306.0" spacing="20" style="-fx-padding: 20;">
-
-        <!-- Logo Section (Optional) -->
+    <VBox alignment="CENTER" layoutX="147.0" layoutY="20.0" prefHeight="460.0" prefWidth="306.0" spacing="20" style="-fx-padding: 20;">
         <ImageView fx:id="logoImageView" fitHeight="100" fitWidth="100" pickOnBounds="true" preserveRatio="true" />
 
-        <!-- Email Input Field -->
         <TextField fx:id="emailField" promptText="Email" styleClass="input-field" />
-
-        <!-- Password Input Field -->
         <PasswordField fx:id="passwordField" promptText="Password" styleClass="input-field" />
 
-        <!-- Login Button -->
+        <!-- Custom CAPTCHA -->
+        <HBox alignment="CENTER_LEFT" spacing="10">
+            <ImageView fx:id="captchaIcon" fitHeight="40" fitWidth="40" pickOnBounds="true" preserveRatio="true">
+                <image>
+                    <Image url="@icons/captcha.png" />
+                </image>
+            </ImageView>
+            <Label fx:id="captchaQuestionLabel" text="What is..." minWidth="100" maxWidth="Infinity" />
+            <TextField fx:id="captchaAnswerField" promptText="Answer" prefWidth="100" />
+        </HBox>
+
         <Button fx:id="loginButton" onAction="#handleLogin" styleClass="btn-login" text="Login" />
 
-        <!-- Register Redirect Link -->
         <HBox alignment="CENTER" spacing="5">
             <Label text="Don't have an account?" />
             <Hyperlink fx:id="registerLink" onAction="#handleRegisterLink" text="Register here" />
         </HBox>
 
+        <HBox alignment="CENTER" spacing="5">
+            <Label text="Forgot your password?" />
+            <Hyperlink fx:id="forgotPasswordLink" onAction="#handleForgotPassword" text="Click here" />
+        </HBox>
     </VBox>
 </AnchorPane>
