--- a/src/main/resources/org/example/gestionproduit/Register.fxml
+++ b/src/main/resources/org/example/gestionproduit/Register.fxml
@@ -1,43 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.gestionproduit.controller.RegisterController">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.gestionproduit.controller.RegisterController">
+    <VBox alignment="CENTER" layoutX="105.0" layoutY="7.0" prefHeight="627.0" prefWidth="389.0" spacing="15" style="-fx-padding: 20;">
 
-    <!-- Container for Register Form -->
-    <VBox alignment="CENTER" layoutX="105.0" layoutY="7.0" prefHeight="627.0" prefWidth="389.0" spacing="20" style="-fx-padding: 20;">
-
-        <!-- Logo Section (Optional) -->
         <ImageView fx:id="logoImageView" fitHeight="100" fitWidth="100" pickOnBounds="true" preserveRatio="true" />
 
-        <!-- Name Input -->
         <TextField fx:id="nomField" promptText="Nom" styleClass="input-field" />
         <TextField fx:id="prenomField" promptText="Prenom" styleClass="input-field" />
-
-        <!-- Email Input -->
         <TextField fx:id="emailField" promptText="Email" styleClass="input-field" />
-
-        <!-- Password Input -->
         <PasswordField fx:id="passwordField" promptText="Password" styleClass="input-field" />
-
-        <!-- Address Input -->
         <TextField fx:id="adresseField" promptText="Address" styleClass="input-field" />
 
-        <!-- Profile Picture (Optional) -->
-        <TextField fx:id="profilePictureField" promptText="Profile Picture (optional)" styleClass="input-field" />
+        <HBox alignment="CENTER" spacing="5">
+            <TextField fx:id="profilePictureField" editable="false" promptText="Profile Picture (optional)" styleClass="input-field" />
+            <Button onAction="#handleBrowsePicture" text="Browse" />
+        </HBox>
 
-        <!-- Register Button -->
         <Button fx:id="registerButton" onAction="#handleRegister" styleClass="btn-register" text="Register" />
 
-        <!-- Login Link -->
         <HBox alignment="CENTER" spacing="5">
             <Label text="Already have an account?" />
             <Hyperlink fx:id="loginLink" onAction="#handleLoginLink" text="Login here" />
